added All categories fetching and Users

--- a/src/app/Categories/all-categories/all-categories.component.html
+++ b/src/app/Categories/all-categories/all-categories.component.html
@@ -1,1 +1,31 @@
-<p>all-categories works!</p>
+<div class="shadow-lg rounded-lg overflow-hidden mx-4 md:mx-12">
+    <table class="w-full table-fixed">
+      <thead>
+        <tr class="bg-gray-100">
+          <th class="w-1/4 py-4 px-6 text-left text-gray-600 font-bold uppercase">category name</th>
+          <th class="w-1/4 py-4 px-6 text-left text-gray-600 font-bold uppercase">description</th>
+          <th class="w-1/4 py-4 px-6 text-left text-gray-600 font-bold uppercase">image</th>
+          <th class="w-1/4 py-4 px-6 text-left text-gray-600 font-bold uppercase">Actions</th>
+        </tr>
+      </thead>
+      <tbody class="bg-white">
+        <tr *ngFor="let category of categories">
+          <td class="py-4 px-6 border-b border-gray-200">{{ category.categoryName }}</td>
+          <td class="py-4 px-6 border-b border-gray-200 truncate">{{ category.description }}</td>
+          <td class="py-4 px-6 border-b border-gray-200">
+          </td>
+          <td class="py-4 px-6 border-b border-gray-200">
+            <button class="px-2 py-1 mr-2 rounded-lg bg-green-500 text-white">Edit</button>
+            <button class="px-2 py-1 rounded-lg bg-red-500 text-white">Delete</button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+    <app-pagination 
+    [totalItems]="totalItems"
+    [currentPage]="currentPage"
+    [pageSize]="pageSize"
+    [totalPages]="totalPages"
+    (pageChange)="onPageChange($event)">
+    </app-pagination>
