modification of sideba + review

--- a/src/app/Orders/all-orders/all-orders.component.html
+++ b/src/app/Orders/all-orders/all-orders.component.html
@@ -1,1 +1,48 @@
-<p>all-orders works!</p>
+<div class="order-details">
+  <div class="order-section">
+    <h3>Order</h3>
+    <table>
+      <tr>
+        <th>Order ID:</th>
+        <td>{{ orderId }}</td>
+
+        <th>Order Date:</th>
+        <td>{{ orderDate }}</td>
+        <th>Updated Date:</th>
+        <td>{{ updatedDate }}</td>
+        <th>Order Status:</th>
+        <td>{{ orderStatus }}</td>
+      </tr>
+    </table>
+  </div>
+
+  <div class="order-section">
+    <h3>Order Items</h3>
+    <table>
+      <tr>
+        <th>Product Name</th>
+        <th>Quantity</th>
+        <th>Price</th>
+      </tr>
+      <tr *ngFor="let item of orderItems">
+        <td>{{ item.name }}</td>
+        <td>{{ item.quantity }}</td>
+        <td>{{ item.price }}</td>
+      </tr>
+    </table>
+  </div>
+
+  <div class="order-section">
+    <h3>Shipping</h3>
+    <table>
+      <tr>
+        <th>Address</th>
+        <td>{{ shipping.address }}</td>
+        <th>Shipping Cost</th>
+        <td>{{ shipping.cost }}</td>
+        <th>Estimated Delivery Date</th>
+        <td>{{ shipping.deliveryDate }}</td>
+      </tr>
+    </table>
+  </div>
+</div>
