--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,18 +6,14 @@
     nzBreakpoint="md"
     [(nzCollapsed)]="isCollapsed"
     [nzTrigger]="null"
+    style="background-color: #fff"
   >
     <div class="sidebar-logo">
       <span class="sidebar-logo-text">N</span>
 
       <h1>NOMAD NEST</h1>
     </div>
-    <ul
-      nz-menu
-      nzTheme="dark"
-      nzMode="inline"
-      [nzInlineCollapsed]="isCollapsed"
-    >
+    <ul nz-menu nzMode="inline" [nzInlineCollapsed]="isCollapsed">
       <!-- dashboar............................................................................................................... -->
       <li nz-menu-item nzMatchRouter routerLink="/dashboard">
         <a>
@@ -25,9 +21,56 @@
           <span>Dashboard</span>
         </a>
       </li>
+      <!-- user area ..........................................................................................................-->
+
+      <li nz-menu-item nzMatchRouter routerLink="/all-users">
+        <a>
+          <i nz-icon nzType="user"></i>
+          <span>Users</span>
+        </a>
+      </li>
+
+      <li nz-menu-item nzMatchRouter routerLink="/all-categories">
+        <a>
+          <i nz-icon nzType="folder"></i>
+          <span>Categories</span>
+        </a>
+      </li>
+      <!-- Subcategory .........................................................................................................-->
+
+      <li nz-menu-item nzMatchRouter routerLink="/all-subcategories">
+        <a>
+          <i nz-icon nzType="folder"></i>
+          <span>Subcategories</span>
+        </a>
+      </li>
+      <!-- Product ...........................................................................................................-->
+
+      <li nz-menu-item nzMatchRouter routerLink="/all-products">
+        <a>
+          <i nz-icon nzType="shopping"></i>
+          <span>Products</span>
+        </a>
+      </li>
+      <!-- Order.................................................................................................................... -->
+
+      <li nz-menu-item nzMatchRouter routerLink="/all-orders">
+        <a>
+          <i nz-icon nzType="shopping-cart"></i>
+          <span>Orders</span>
+        </a>
+      </li>
+      <!-- review............................................................................................................... -->
+
+      <li nz-menu-item nzMatchRouter routerLink="/review">
+        <a>
+          <i nz-icon nzType="star"></i>
+          <span>Review</span>
+        </a>
+      </li>
 
       <!-- Order.................................................................................................................... -->
-      <li nz-submenu nzOpen nzTitle="Order" nzIcon="form">
+      <!-- <li nz-submenu nzOpen nzTitle="Order" nzIcon="form">
         <ul>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/add-order">Add Order</a>
@@ -36,9 +79,9 @@
             <a routerLink="/all-orders">All Order</a>
           </li>
         </ul>
-      </li>
+      </li> -->
       <!-- user area ..........................................................................................................-->
-      <li nz-submenu nzOpen nzTitle="User" nzIcon="user">
+      <!-- <li nz-submenu nzOpen nzTitle="User" nzIcon="user">
         <ul>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/add-user">Add User</a>
@@ -47,11 +90,11 @@
             <a routerLink="/all-users">All Users</a>
           </li>
         </ul>
-      </li>
+      </li> -->
 
       <!-- review............................................................................................................... -->
 
-      <li nz-submenu nzOpen nzTitle="Categories" nzIcon="folder">
+      <!-- <li nz-submenu nzOpen nzTitle="Categories" nzIcon="folder">
         <ul>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/add-category">Add Category</a>
@@ -60,10 +103,10 @@
             <a routerLink="/all-categories">All Categories</a>
           </li>
         </ul>
-      </li>
+      </li> -->
 
       <!-- Subcategory .........................................................................................................-->
-      <li nz-submenu nzOpen nzTitle="Subcategories" nzIcon="folder">
+      <!-- <li nz-submenu nzOpen nzTitle="Subcategories" nzIcon="folder">
         <ul>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/add-subcategory">Add Subcategory</a>
@@ -72,10 +115,10 @@
             <a routerLink="/all-subcategories">All Subcategories</a>
           </li>
         </ul>
-      </li>
+      </li> -->
 
       <!-- Product ...........................................................................................................-->
-      <li nz-submenu nzOpen nzTitle="Products" nzIcon="shopping">
+      <!-- <li nz-submenu nzOpen nzTitle="Products" nzIcon="shopping">
         <ul>
           <li nz-menu-item nzMatchRouter>
             <a routerLink="/add-product">Add Product</a>
@@ -84,15 +127,15 @@
             <a routerLink="/all-products">All Products</a>
           </li>
         </ul>
-      </li>
+      </li> -->
 
       <!-- review............................................................................................................... -->
-      <li nz-menu-item nzMatchRouter routerLink="/review">
+      <!-- <li nz-menu-item nzMatchRouter routerLink="/review">
         <a>
           <i nz-icon nzType="star"></i>
           <span>Review</span>
         </a>
-      </li>
+      </li> -->
     </ul>
   </nz-sider>
   <nz-layout>
