--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,7 +14,7 @@
       <h1>NOMAD NEST</h1>
     </div>
     <ul nz-menu nzMode="inline" [nzInlineCollapsed]="isCollapsed">
-      <!-- dashboar............................................................................................................... -->
+      <!-- dashboar.............................................................................................................. -->
       <li nz-menu-item nzMatchRouter routerLink="/dashboard">
         <a>
           <i nz-icon nzType="dashboard"></i>
